<resources>
    <string name="app_name">Step Counter</string>
    <string name="achieve_completed">achievements completed</string>
    <string name="achieve_eight_calorie">300</string>
    <string name="achieve_eight_distance">30 KM</string>
    <string name="achieve_five_calorie">100</string>
    <string name="achieve_five_distance">12 KM</string>
    <string name="achieve_four_calorie">60</string>
    <string name="achieve_four_distance">8 KM</string>
    <string name="achieve_nine_calorie">400</string>
    <string name="achieve_nine_distance">50 KM</string>
    <string name="achieve_one_calorie">10</string>
    <string name="achieve_one_distance">1 KM</string>
    <string name="achieve_seven_calorie">200</string>
    <string name="achieve_seven_distance">20 KM</string>
    <string name="achieve_six_calorie">150</string>
    <string name="achieve_six_distance">16 KM</string>
    <string name="achieve_three_calorie">40</string>
    <string name="achieve_three_distance">4 KM</string>
    <string name="achieve_two_calorie">20</string>
    <string name="achieve_two_distance">2 KM</string>

    <string name="alarm_heading">Step Counter Reminder</string>
    <string name="alarm_heading_daily">Steps Counter Reminder</string>
    <string name="alarm_message">Start your workout</string>
    <string name="alarm_message_daily">Are you taking the recommended 10000 steps per day?</string>
    <string name="all_achieve_completed">All achievements completed</string>
    <string name="allow">Allow</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_title">Step Counter</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="badges">Badges</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calories">Calories</string>
    <string name="challenge_done_calories">Calories Challenge Completed. View Now!</string>
    <string name="challenge_done_distance">Distance Challenge Completed. View Now!</string>
    <string name="challenge_done_steps">Steps Challenge Completed. View Now!</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="congrats">Congratulations</string>
    <string name="date">Date</string>
    <string name="distance_km">Distance (km)</string>
    <string name="distance_mi">Distance (mile)</string>
    <string name="empty_records">No record added</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_steps">Please enter value greater than 0</string>
    <string name="error_unit">Please select any unit</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fill_fields">Please fill all fields!</string>
    <string name="get_achievement">0 Achievements completed</string>
    <string name="goal">Goal</string>
    <string name="goal_completed">Steps goal completed</string>
    <string name="history">History</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="info">If you shake your phone, it might be counted as a step because of the built-in sensor. Please note that it is not a bug.\n\n We will keep working on providing a better user experience.</string>
    <string name="information">Others</string>
    <string name="item_view_role_description">Tab</string>
    <string name="kilometers">Kilometers</string>
    <string name="km">KM</string>

    <string name="mile">MILE</string>
    <string name="miles">Miles</string>
    <string name="name">Name</string>
    <string name="need_perm">Need permission in order to count steps accurately</string>
    <string name="not_compat">Sorry! Your Device has No Accelerometer Sensor</string>
    <string name="perm_header">Permission Needed</string>
    <string name="perm_msg">This application needs the permission, please accept to use the application</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="seetxt">View Now!</string>
    <string name="set">Ok</string>
    <string name="set_target">Set Target</string>
    <string name="start">Start</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="step_goals">Daily Step Goal</string>
    <string name="steps">Daily Steps</string>
    <string name="stop">Pause</string>
    <string name="totals">Totals</string>
    <string name="unit">Unit</string>
    <string name="open_settings">Open Settings</string>
</resources>