<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:background="@drawable/btn_back"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="left"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_footprint"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/black_33"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/stepTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:textSize="11sp"
                android:textColor="@color/black_33"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_distance"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textColor="@color/black_33"
                android:layout_gravity="center"
                android:id="@+id/distanceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:textSize="11sp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textColor="@color/black_33"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/distanceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="right"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_calaories"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textColor="@color/black_33"
                android:layout_gravity="center"
                android:id="@+id/calorieTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:textSize="11sp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textColor="@color/black_33"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
