<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_F5"
    android:id="@+id/ll_home"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="SETTINGS"
            android:textColor="@color/black_33"
            android:textSize="@dimen/_18ssp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_back"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/set_target"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/_14ssp" />

                <RelativeLayout
                    android:id="@+id/setGoalLay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/step_goals"
                        android:textColor="@color/black_33"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/dailyGoalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="100"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12ssp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/unitLay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/unit"
                        android:textColor="@color/black_33"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/UnitTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/kilometers"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:id="@+id/iv_down"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_main_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_back"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="My Coins"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/_14ssp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/txt_total_main_coin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="00000 "
                        android:textColor="@color/black_33"
                        android:textSize="@dimen/_24ssp"
                        app:drawableLeftCompat="@drawable/coins" />

                    <TextView
                        android:id="@+id/txt_equal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/txt_total_main_coin"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="="
                        android:singleLine="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black_33"
                        android:textSize="@dimen/_22ssp" />

                    <TextView
                        android:id="@+id/txt_total_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/txt_equal"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_withdrw_coin"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/stroke_bg"
                    android:backgroundTint="@color/btn_color"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="Withdraw"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_back"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/information"
                android:textColor="@color/black_33"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_shareapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="Share App"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txt_rateus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="Rate Us"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txt_pp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="Privacy Policy"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="Information"
                    android:textColor="@color/black_33"
                    android:background="?attr/selectableItemBackground"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txt_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_5sdp"
                    android:text="Help"
                    android:textColor="@color/black_33"
                    android:background="?attr/selectableItemBackground"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_meter"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20ssp"
            android:background="@drawable/edit_text_bottom_border"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:orientation="vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/kmCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:padding="@dimen/_5sdp"
                android:text="@string/kilometers"
                android:textColor="@color/black_33" />

            <CheckBox
                android:id="@+id/mileCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:padding="@dimen/_5sdp"
                android:text="@string/miles"
                android:textColor="@color/black_33" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <include
            android:id="@+id/ads_ly"
            layout="@layout/allsmallnative" />

    </RelativeLayout>


</LinearLayout>
